--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
     <style>
         input {
             border: solid black 5px;
@@ -38,7 +41,81 @@
         </table>
     </div>
 
+    <br>
+    <br>
 
+
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Launch demo modal
+  </button>
+
+    <!-- Modal -->
+    <div class="modal fade bd-example-modal-lg" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+
+
+
+                        <form>
+                            <div class="form-group row container-fluid">
+                                <label for="authorId" class="col-6 col-form-label">Author name</label>
+                                <div class="col-6">
+                                    <input type="text" class="form-control-plaintext" id="authorId">
+                                </div>
+                            </div>
+
+                            <div class="form-group row container-fluid">
+                                <label for="titluId" class="col-2 col-form-label">Title</label>
+                                <div class="col-10">
+                                    <input type="text" class="form-control-plaintext" id="titluId">
+                                </div>
+                            </div>
+
+
+                            <div class="form-group row container-fluid">
+                                <label for="nrPagId" class="col-2 col-form-label">NrPag</label>
+                                <div class="col-10">
+                                    <input type="number" class="form-control-plaintext" id="nrPagId">
+                                </div>
+                            </div>
+
+
+                            <div class="form-group row container-fluid">
+                                <label for="anId" class="col-2 col-form-label">An</label>
+                                <div class="col-10">
+                                    <input type="number" class="form-control-plaintext" id="anId">
+                                </div>
+                            </div>
+
+
+
+
+                        </form>
+
+                    </div>
+
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" onclick="salveazaDate()" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
